--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,11 +60,19 @@ flutter:
   assets:
     - assets/certificate_bg.jpg
     - assets/logo.png
+    - assets/fire_safety.png
+  fonts:
+    - family: aAtomicMd
+      fonts:
+        - asset: assets/fonts/aAtomicMd.ttf
+    - family: Typo
+      fonts:
+        - asset: assets/fonts/Typo.otf
+  uses-material-design: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
